Fix header icon margins on narrow screens

--- a/docs/stylesheets/_topbar.css
+++ b/docs/stylesheets/_topbar.css
@@ -127,6 +127,12 @@ header {
     }
 }
 
+@media screen and (max-width: 25em) {
+    #burger {
+        margin-left: 5vw;
+    }
+}
+
 :root {
     --header-height: 4rem;
 }
